<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UniversityAffiliation">

    <TextView
        android:id="@+id/show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/date_of_birth"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/show_name"
        app:layout_constraintTop_toBottomOf="@+id/show_name" />

    <TextView
        android:id="@+id/show_nid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/nid_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/show_dob"
        app:layout_constraintTop_toBottomOf="@+id/show_dob" />

    <TextView
        android:id="@+id/show_blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/b_group"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/show_nid"
        app:layout_constraintTop_toBottomOf="@+id/show_nid" />

    <TextView
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/show_name"
        app:layout_constraintStart_toEndOf="@+id/show_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dob_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/show_dob"
        app:layout_constraintStart_toEndOf="@+id/show_dob"
        app:layout_constraintTop_toBottomOf="@+id/name_field" />

    <TextView
        android:id="@+id/nid_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/show_nid"
        app:layout_constraintStart_toEndOf="@+id/show_nid"
        app:layout_constraintTop_toBottomOf="@+id/dob_field" />

    <TextView
        android:id="@+id/blood_group_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/show_blood_group"
        app:layout_constraintStart_toEndOf="@+id/show_blood_group"
        app:layout_constraintTop_toBottomOf="@+id/nid_field" />

    <EditText
        android:id="@+id/input_student_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/spinner_department"
        app:layout_constraintStart_toStartOf="@+id/spinner_department"
        app:layout_constraintTop_toBottomOf="@+id/spinner_department" />

    <Button
        android:id="@+id/next1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="launchStudentInformation"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#9A8B8B"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_study_level" />

    <Spinner
        android:id="@+id/spinner_university"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/show_blood_group"
        app:layout_constraintStart_toStartOf="@+id/show_blood_group"
        app:layout_constraintTop_toBottomOf="@+id/show_blood_group" />

    <Spinner
        android:id="@+id/spinner_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/spinner_university"
        app:layout_constraintStart_toStartOf="@+id/spinner_university"
        app:layout_constraintTop_toBottomOf="@+id/spinner_university" />

    <Spinner
        android:id="@+id/spinner_study_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/input_student_id"
        app:layout_constraintStart_toStartOf="@+id/input_student_id"
        app:layout_constraintTop_toBottomOf="@+id/input_student_id" />

</androidx.constraintlayout.widget.ConstraintLayout>